<package>
  <name>ee_cart_imped_control</name>
  <version>1.0.0</version>
  <description>A force/impedance controller.</description>
  <maintainer email="">Mario Bollini</maintainer>
  <maintainer email="">Jenny Barry</maintainer>
  <maintainer email="">and Huan Liu</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ee_cart_imped_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Mario Bollini</author>
  <author>Jenny Barry</author>
  <author>and Huan Liu</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>ee_cart_imped_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>pr2_gripper_sensor_controller</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>ee_cart_imped_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>pr2_gripper_sensor_controller</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>kdl</test_depend> -->
  <!-- <test_depend>pr2_controller_manager</test_depend> -->
  <!-- <test_depend>pr2_controller_interface</test_depend> -->
  <!-- <test_depend>pr2_mechanism_model</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>realtime_tools</test_depend> -->
  <!-- <test_depend>ee_cart_imped_msgs</test_depend> -->
  <!-- <test_depend>pr2_msgs</test_depend> -->
  <!-- <test_depend>pr2_gripper_sensor_controller</test_depend> -->

<export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>


